[package]
name = "kvs"
version = "0.1.0"
authors = ["cxz888 <idlercloud@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
sled = "0.34"
anyhow = "1"
log = "0.4"
env_logger = "0.10"

# bytes = "1"
# chrono = "0.4.19"
# crossbeam-channel = "0.5.4"
# clap = "3.2.14"
# fastrand = "1"
rand = "0.8"
rayon = "1.6"
arc-swap = "1.6"
# indexmap = "1.9.1"
# indexmap = { version = "1.9.1", features = ["serde", "rayon"] }
dashmap = "5.4"
fastrand = "1.9"
# itertools = "0.10.3"
# num_cpus = "1.13.1"
# regex = "1.6.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml = "0.8"

# tokio = { version = "1", features = ["full"] }
# async-trait = "0.1.53"
# futures = "0.3"

# reqwest = { version = "0.11.11", features = ["blocking"] }

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.4"
crossbeam-utils = "0.8"
predicates = "2.1"
rand = "0.8"
tempfile = "3.3"
walkdir = "2.3"
panic-control = "0.1"
fastrand = "1.9"
# pretty_assertions = "1.3"

[profile.release]
# lto = "fat"
# codegen-units = 1
# debug = true

[[bench]]
name = "sequential_engine"
harness = false

[[bench]]
name = "concurrent_engine"
harness = false

[[bench]]
name = "thread_pool"
harness = false
